@@ -2,6 +2,9 @@ Version 0.4.3+
 	* Add coordinate-descent based LASSO
 	* Add unsupervised.center function
 	* Make zscore work with NaNs (by ignoring them)
+	* Propagate apply_many calls through transformers
+	* Much faster SVM classification with means a much faster defaultlearner()
+	[measured 2.5x speedup on yeast dataset!]
 
 Version 0.4.3 2012-09-19 by luispedro
 	* Add select_n_best & rank_corr to featureselection
